@@ -2,8 +2,9 @@ Revision history for beacon2-ri-tools
 
 2.0.8  2025-0X-XX
 
-    - Addex 'examples' dir with hg38 (GRCh38)
-    - Added spinner when 'bin'beacon' is executed interactively
+	- Added examples directory with hg38 (GRCh38)
+	- Added spinner for interactive execution of 'bin/beacon'
+	- Added basic tests in t/
 
 2.0.7  2025-02-22
     - Moved 'browser/web' to 'utils/bff_browser/static/assets'
